--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "reversepolishkata",
   "version": "1.0.0",
   "description": "Reverse Polish Kata",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "test"
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC",
