--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 // Place your settings in this file to overwrite default and user settings.
 {
     // Mocha: Glob to search for test files
-    "mocha.files.glob": "test/*.js"
+    "mocha.files.glob": "test/*.js",
+
+    // Controls the font size in pixels.
+    "editor.fontSize": 14
+
 }
